--- a/env.yml
+++ b/env.yml
@@ -152,4 +152,12 @@ dependencies:
   - zeromq=4.3.5=hd77b12b_0
   - zlib=1.2.13=h8cc25b3_1
   - zstd=1.5.6=h8880b57_0
+  - pip:
+      - contourpy==1.3.1
+      - cycler==0.12.1
+      - fonttools==4.56.0
+      - kiwisolver==1.4.8
+      - matplotlib==3.10.1
+      - pillow==11.1.0
+      - pyparsing==3.2.1
 prefix: C:\Users\eiche\anaconda3\envs\ppchem
