envirronement avec py3Dmol

--- a/env.yml
+++ b/env.yml
@@ -159,5 +159,7 @@ dependencies:
       - kiwisolver==1.4.8
       - matplotlib==3.10.1
       - pillow==11.1.0
+      - py3dmol==2.4.2
       - pyparsing==3.2.1
+      - scipy==1.15.2
 prefix: C:\Users\eiche\anaconda3\envs\ppchem
