Updated environment to include rdkit

--- a/env.yml
+++ b/env.yml
@@ -161,5 +161,6 @@ dependencies:
       - pillow==11.1.0
       - py3dmol==2.4.2
       - pyparsing==3.2.1
+      - rdkit==2022.9.5
       - scipy==1.15.2
 prefix: C:\Users\eiche\anaconda3\envs\ppchem
