--- a/env.yml
+++ b/env.yml
@@ -1,155 +1,170 @@
-name: ppchem
+name: ppchem2
 channels:
   - defaults
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
   - https://repo.anaconda.com/pkgs/msys2
 dependencies:
-  - anyio=4.6.2=py310haa95532_0
-  - argon2-cffi=21.3.0=pyhd3eb1b0_0
-  - argon2-cffi-bindings=21.2.0=py310h827c3e9_1
-  - asttokens=2.0.5=pyhd3eb1b0_0
-  - async-lru=2.0.4=py310haa95532_0
-  - attrs=24.3.0=py310haa95532_0
-  - babel=2.16.0=py310haa95532_0
-  - beautifulsoup4=4.12.3=py310haa95532_0
-  - blas=1.0=mkl
-  - bleach=6.2.0=py310haa95532_0
-  - bottleneck=1.4.2=py310hc99e966_0
-  - brotli-python=1.0.9=py310h5da7b33_9
   - bzip2=1.0.8=h2bbff1b_6
-  - ca-certificates=2024.12.31=haa95532_0
-  - certifi=2025.1.31=py310haa95532_0
-  - cffi=1.17.1=py310h827c3e9_1
-  - charset-normalizer=3.3.2=pyhd3eb1b0_0
-  - colorama=0.4.6=py310haa95532_0
-  - comm=0.2.1=py310haa95532_0
-  - debugpy=1.8.11=py310h5da7b33_0
-  - decorator=5.1.1=pyhd3eb1b0_0
-  - defusedxml=0.7.1=pyhd3eb1b0_0
-  - exceptiongroup=1.2.0=py310haa95532_0
-  - executing=0.8.3=pyhd3eb1b0_0
-  - h11=0.14.0=py310haa95532_0
-  - httpcore=1.0.2=py310haa95532_0
-  - httpx=0.27.0=py310haa95532_0
-  - icu=73.1=h6c2663c_0
-  - idna=3.7=py310haa95532_0
-  - intel-openmp=2023.1.0=h59b6b97_46320
-  - ipykernel=6.29.5=py310haa95532_1
-  - ipython=8.30.0=py310haa95532_0
-  - ipywidgets=8.1.5=py310haa95532_0
-  - jedi=0.19.2=py310haa95532_0
-  - jinja2=3.1.5=py310haa95532_0
-  - jpeg=9e=h827c3e9_3
-  - json5=0.9.25=py310haa95532_0
-  - jsonschema=4.23.0=py310haa95532_0
-  - jsonschema-specifications=2023.7.1=py310haa95532_0
-  - jupyter=1.1.1=py310haa95532_0
-  - jupyter-lsp=2.2.0=py310haa95532_0
-  - jupyter_client=8.6.3=py310haa95532_0
-  - jupyter_console=6.6.3=py310haa95532_0
-  - jupyter_core=5.7.2=py310haa95532_0
-  - jupyter_events=0.10.0=py310haa95532_0
-  - jupyter_server=2.14.1=py310haa95532_0
-  - jupyter_server_terminals=0.4.4=py310haa95532_1
-  - jupyterlab=4.3.4=py310haa95532_0
-  - jupyterlab_pygments=0.1.2=py_0
-  - jupyterlab_server=2.27.3=py310haa95532_0
-  - jupyterlab_widgets=3.0.13=py310haa95532_0
-  - krb5=1.20.1=h5b6d351_0
+  - ca-certificates=2025.2.25=haa95532_0
   - libffi=3.4.4=hd77b12b_1
-  - libpng=1.6.39=h8cc25b3_0
-  - libpq=17.2=h70ee33d_0
-  - libsodium=1.0.18=h62dcd97_0
-  - lz4-c=1.9.4=h2bbff1b_1
-  - markupsafe=3.0.2=py310h827c3e9_0
-  - matplotlib-inline=0.1.6=py310haa95532_0
-  - mistune=2.0.4=py310haa95532_0
-  - mkl=2023.1.0=h6b88ed4_46358
-  - mkl-service=2.4.0=py310h827c3e9_2
-  - mkl_fft=1.3.11=py310h827c3e9_0
-  - mkl_random=1.2.8=py310hc64d2fc_0
-  - nbclient=0.8.0=py310haa95532_0
-  - nbconvert=7.16.4=py310haa95532_0
-  - nbformat=5.10.4=py310haa95532_0
-  - nest-asyncio=1.6.0=py310haa95532_0
-  - notebook=7.3.2=py310haa95532_0
-  - notebook-shim=0.2.3=py310haa95532_0
-  - numexpr=2.10.1=py310h4cd664f_0
-  - numpy=2.0.1=py310h055cbcc_1
-  - numpy-base=2.0.1=py310h65a83cf_1
-  - openssl=3.0.15=h827c3e9_0
-  - overrides=7.4.0=py310haa95532_0
-  - packaging=24.2=py310haa95532_0
-  - pandas=2.2.3=py310h5da7b33_0
-  - pandocfilters=1.5.0=pyhd3eb1b0_0
-  - parso=0.8.4=py310haa95532_0
+  - openssl=3.0.16=h3f729d1_0
   - pip=25.0=py310haa95532_0
-  - platformdirs=3.10.0=py310haa95532_0
-  - prometheus_client=0.21.0=py310haa95532_0
-  - prompt-toolkit=3.0.43=py310haa95532_0
-  - prompt_toolkit=3.0.43=hd3eb1b0_0
-  - psutil=5.9.0=py310h827c3e9_1
-  - pure_eval=0.2.2=pyhd3eb1b0_0
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pygments=2.15.1=py310haa95532_1
-  - pyqt=6.7.1=py310h5da7b33_0
-  - pyqt6-sip=13.9.1=py310h827c3e9_0
-  - pysocks=1.7.1=py310haa95532_0
   - python=3.10.16=h4607a30_1
-  - python-dateutil=2.9.0post0=py310haa95532_2
-  - python-fastjsonschema=2.20.0=py310haa95532_0
-  - python-json-logger=3.2.1=py310haa95532_0
-  - python-tzdata=2023.3=pyhd3eb1b0_0
-  - pytz=2024.1=py310haa95532_0
-  - pywin32=308=py310h5da7b33_0
-  - pywinpty=2.0.14=py310h72d21ff_0
-  - pyyaml=6.0.2=py310h827c3e9_0
-  - pyzmq=26.2.0=py310h5da7b33_0
-  - qtbase=6.7.2=h0804d20_1
-  - qtconsole=5.6.1=py310haa95532_0
-  - qtdeclarative=6.7.2=h5da7b33_0
-  - qtpy=2.4.1=py310haa95532_0
-  - qtsvg=6.7.2=hf2fb9eb_0
-  - qttools=6.7.2=h0de5f00_0
-  - qtwebchannel=6.7.2=h5da7b33_0
-  - qtwebsockets=6.7.2=h5da7b33_0
-  - referencing=0.30.2=py310haa95532_0
-  - requests=2.32.3=py310haa95532_1
-  - rfc3339-validator=0.1.4=py310haa95532_0
-  - rfc3986-validator=0.1.1=py310haa95532_0
-  - rpds-py=0.22.3=py310h636fa0f_0
-  - send2trash=1.8.2=py310haa95532_1
   - setuptools=75.8.0=py310haa95532_0
-  - sip=6.10.0=py310h5da7b33_0
-  - six=1.16.0=pyhd3eb1b0_1
-  - sniffio=1.3.0=py310haa95532_0
-  - soupsieve=2.5=py310haa95532_0
   - sqlite=3.45.3=h2bbff1b_0
-  - stack_data=0.2.0=pyhd3eb1b0_0
-  - tbb=2021.8.0=h59b6b97_0
-  - terminado=0.17.1=py310haa95532_0
-  - tinycss2=1.4.0=py310haa95532_0
   - tk=8.6.14=h0416ee5_0
-  - tomli=2.0.1=py310haa95532_0
-  - tornado=6.4.2=py310h827c3e9_0
-  - traitlets=5.14.3=py310haa95532_0
-  - typing-extensions=4.12.2=py310haa95532_0
-  - typing_extensions=4.12.2=py310haa95532_0
-  - tzdata=2025a=h04d1e81_0
-  - urllib3=2.3.0=py310haa95532_0
   - vc=14.42=haa95532_4
   - vs2015_runtime=14.42.34433=he0abc0d_4
-  - wcwidth=0.2.5=pyhd3eb1b0_0
-  - webencodings=0.5.1=py310haa95532_1
-  - websocket-client=1.8.0=py310haa95532_0
   - wheel=0.45.1=py310haa95532_0
-  - widgetsnbextension=4.0.13=py310haa95532_0
-  - win_inet_pton=1.1.0=py310haa95532_0
-  - winpty=0.4.3=4
   - xz=5.6.4=h4754444_1
-  - yaml=0.2.5=he774522_0
-  - zeromq=4.3.5=hd77b12b_0
   - zlib=1.2.13=h8cc25b3_1
-  - zstd=1.5.6=h8880b57_0
-prefix: C:\Users\eiche\anaconda3\envs\ppchem
+  - pip:
+      - altair==5.5.0
+      - annotated-types==0.7.0
+      - anyio==4.9.0
+      - argon2-cffi==23.1.0
+      - argon2-cffi-bindings==21.2.0
+      - arrow==1.3.0
+      - asttokens==3.0.0
+      - async-lru==2.0.5
+      - attrs==25.3.0
+      - babel==2.17.0
+      - beautifulsoup4==4.13.3
+      - bleach==6.2.0
+      - blinker==1.9.0
+      - cachetools==5.5.2
+      - certifi==2025.1.31
+      - cffi==1.17.1
+      - charset-normalizer==3.4.1
+      - click==8.1.8
+      - colorama==0.4.6
+      - comm==0.2.2
+      - contourpy==1.3.1
+      - copier==9.6.0
+      - cycler==0.12.1
+      - debugpy==1.8.13
+      - decorator==5.2.1
+      - defusedxml==0.7.1
+      - deprecation==2.1.0
+      - dunamai==1.23.1
+      - exceptiongroup==1.2.2
+      - executing==2.2.0
+      - fastjsonschema==2.21.1
+      - fonttools==4.56.0
+      - fqdn==1.5.1
+      - funcy==2.0
+      - gitdb==4.0.12
+      - gitpython==3.1.44
+      - h11==0.14.0
+      - httpcore==1.0.7
+      - httpx==0.28.1
+      - idna==3.10
+      - ipykernel==6.29.5
+      - ipyspeck==0.6.1
+      - ipython==8.34.0
+      - ipywidgets==7.6.3
+      - isoduration==20.11.0
+      - jedi==0.19.2
+      - jinja2==3.1.6
+      - jinja2-ansible-filters==1.3.2
+      - json5==0.11.0
+      - jsonpointer==3.0.0
+      - jsonschema==4.23.0
+      - jsonschema-specifications==2024.10.1
+      - jupyter==1.1.1
+      - jupyter-client==8.6.3
+      - jupyter-console==6.6.3
+      - jupyter-core==5.7.2
+      - jupyter-events==0.12.0
+      - jupyter-lsp==2.2.5
+      - jupyter-packaging==0.12.3
+      - jupyter-server==2.15.0
+      - jupyter-server-terminals==0.5.3
+      - jupyterlab==4.3.6
+      - jupyterlab-pygments==0.3.0
+      - jupyterlab-server==2.27.3
+      - jupyterlab-widgets==3.0.13
+      - kiwisolver==1.4.8
+      - markupsafe==3.0.2
+      - matplotlib==3.10.1
+      - matplotlib-inline==0.1.7
+      - mistune==3.1.3
+      - mols2grid==2.0.0
+      - narwhals==1.37.0
+      - nbclient==0.10.2
+      - nbconvert==7.16.6
+      - nbformat==5.10.4
+      - nest-asyncio==1.6.0
+      - notebook==7.3.3
+      - notebook-shim==0.2.4
+      - numpy==1.26.4
+      - overrides==7.7.0
+      - packaging==24.2
+      - panda==0.3.1
+      - pandas==2.2.3
+      - pandocfilters==1.5.1
+      - parso==0.8.4
+      - pathspec==0.12.1
+      - pillow==11.1.0
+      - platformdirs==4.3.7
+      - plotly==6.0.1
+      - plumbum==1.9.0
+      - prometheus-client==0.21.1
+      - prompt-toolkit==3.0.50
+      - protobuf==5.29.4
+      - psutil==7.0.0
+      - pure-eval==0.2.3
+      - py3dmol==2.4.2
+      - pyarrow==20.0.0
+      - pycparser==2.22
+      - pydantic==2.11.3
+      - pydantic-core==2.33.1
+      - pydeck==0.9.1
+      - pygments==2.19.1
+      - pyparsing==3.2.3
+      - python-dateutil==2.9.0.post0
+      - python-json-logger==3.3.0
+      - pytz==2025.2
+      - pywin32==310
+      - pywinpty==2.0.15
+      - pyyaml==6.0.2
+      - pyzmq==26.3.0
+      - questionary==2.1.0
+      - rdkit==2022.9.5
+      - referencing==0.36.2
+      - requests==2.32.3
+      - rfc3339-validator==0.1.4
+      - rfc3986-validator==0.1.1
+      - rpds-py==0.24.0
+      - scipy==1.15.2
+      - send2trash==1.8.3
+      - six==1.17.0
+      - smmap==5.0.2
+      - sniffio==1.3.1
+      - soupsieve==2.6
+      - stack-data==0.6.3
+      - stmol==0.0.9
+      - streamlit==1.44.1
+      - streamlit-ketcher==0.0.1
+      - tenacity==9.1.2
+      - terminado==0.18.1
+      - tinycss2==1.4.0
+      - toml==0.10.2
+      - tomli==2.2.1
+      - tomlkit==0.13.2
+      - tornado==6.4.2
+      - traitlets==5.14.3
+      - types-python-dateutil==2.9.0.20241206
+      - typing-extensions==4.13.0
+      - typing-inspection==0.4.0
+      - tzdata==2025.2
+      - uri-template==1.3.0
+      - urllib3==2.3.0
+      - watchdog==6.0.0
+      - wcwidth==0.2.13
+      - webcolors==24.11.1
+      - webencodings==0.5.1
+      - websocket-client==1.8.0
+      - widgetsnbextension==3.5.2
+prefix: C:\Users\eiche\anaconda3\envs\ppchem2
